# water_dp-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.tsm.yml  docker-compose.yml  env.example  init.sql  mosquitto.conf  openapi.json  payload.json  pyproject.toml  pytest.ini  run_with_tsm.sh  start_server.py  test_ingest.csv  timeio.env.example
.github/workflows/: ci.yml  deploy.yml
alembic/: README.md  env.py
alembic/versions/: 3df9c4652156_add_computation_scripts_table.py  475f93023348_consolidate_schema_patches.py  V1_0_0__initial_schema.sql  a1b2c3d4e5f6_add_project_properties.py  ac9f3dbd0130_add_user_context_models.py  d89d8f0ea294_initial_schema_water_dp.py  f1e6eada2f27_add_computation_jobs_table.py  f59aaac0d928_add_schema_name_to_projects.py
app/: __init__.py  main.py  reset_and_seed.py
docker/: migrations.Dockerfile  seeder.Dockerfile
frontend/: .gitignore  Dockerfile  README.md  debug-rgl.js  debug-uuid.js  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
geoserver/: README.md
scripts/: configure_keycloak_realm.py  create_tables.py  create_unlinked_sensors.py  fetch_users.py  fix_code.py  run_migrations.py  run_seeding.py  seed.py  seed_datasources.py  seed_thing_management.py  seed_water_dp.py  setup.py  setup_keycloak.py  setup_keycloak.sh  simulate_sensors.py  start.sh  verify_api.py
tests/: conftest.py  test_api_alerts.py  test_api_bulk.py  test_api_computations.py  test_api_import.py  test_computation_context_alerts.py
(+185 files in other folders)
